--- a/dokumentation.html
+++ b/dokumentation.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Klausurprojekt XHCS">
+    <meta name="author" content="Albina Khadieva">
+    <meta name="copyright" content="Albina Khadieva">
+    <meta name="keywords" content="HTML, CSS, Javascript">
+    <meta name="robots" content="nofollow">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/liste.css">
-    <title>Lists</title>
+    <link rel="stylesheet" href="./css/doc.css">
+    <title>Dokumentation</title>
 </head>
 <body>
     <header>
@@ -39,50 +44,46 @@
             <a href="schachbrett.html" >Aufgabe-5</a>
             <a href="design.html">Aufgabe-6</a>
             <a href="formating.html">Aufgabe-11</a>
-            <a href="liste.html" clicked>Aufgabe-12</a>
+            <a href="liste.html">Aufgabe-12</a>
             <a href="table.html">Aufgabe-13</a>
-            <a href="dokumentation.html">Dokumentation</a>
+            <a href="dokumentation.html" clicked>Dokumentation</a>
         </div>
     </header>
+    
     <main>
         <div class="container">
-        <h1>Liste</h1>
-        <details>
-            <summary>JAVA Module</summary>
-            <ul>
-                <li>JAV1 Java Plattform und Generics</li>
-                <li>JAV2 Datentypen, Typisierung, Variablen	</li>
-                <li>JAV3 Java - Klassen, Objekte und Exceptions	</li>
-                <li>JAV4 Vorbereitung auf die OCA-Zertifizierung	</li>
-            </ul>
-        </details>
-        
-        <details>
-            <summary>C++ Module</summary>
-        <ol>
-            <li>CPP1 Programmieren mit C++ - Grundlagen	</li>
-            <li>CPP2 Programmieren mit C++ - Aufbaukurs	</li>
-            <li>CPP3 Programmieren mit C++ - GUI-Programmierung	</li>
-            <li>CPP4 Programmieren mit C++ - Ereignisbasierter Programmablauf</li>
-        </ol>
-        </details>
-        <details>
-            <summary>Andere Module</summary>
-        <dl>
-            <dt>XHCS </dt>
-            <dd>- Webdesign mit HTML5</dd>
-            <dt>UIUX UI/UX-Design</dt>
-            <dd>- Eine Einführung in Website-Konzeption & Usability</dd>
-            <dt>JAJQ </dt>
-            <dd>- JavaScript Framework jQuery</dd>
-            <dt>CMS1</dt>
-            <dd>- Content Management mit TYPO3 - Grundlagen</dd>
-        </dl>
-        </details>
-    </div>
+            <h1>Dokumentation</h1>
+            <p>Das Projekt ist eine Website, die  mit HTML, CSS, SVG, JavaScript Webtechnologien realisiert wurde.</p>
+            <p><b>Anzahl der Seiten:</b> 10</p>
+            <dl>
+                <dt>index.html </dt>
+                <dd>Home-Site. Diese Seite enthält eine Willkommensnachricht und Kontaktinformationen. Außer den grundsätzlichen semantischen Tags  &lt;header&gt;,  &lt;main&gt; und  &lt;footer&gt; waren hier auch die Tags  &lt;aside&gt; und  &lt;address&gt; beteiligt.</dd>
+                <dt>links.html</dt>
+                <dd>Auf dieser Seite wird die Navigation über Anker-Links realisiert.</dd>
+                <dt>gallery.html</dt>
+                <dd>Eine Seite mit Galerie-Applikation. Anzahl der Bilder wird im Formular eingegeben und die Bilder werden mit einer Funktion dynamisch dargestellt.</dd>
+                <dt>multitafel.html</dt>
+                <dd>Auf dieser Seite wird eine Multiplikationstafel mit einer Schleife generiert.</dd>
+                <dt>schachbrett.html</dt>
+                <dd>Auf dieser Seite wird ein Schachbrett mit verschachtelten Schleifen generiert.</dd>
+                <dt>design.html</dt>
+                <dd>Die Seite, dessen Design von der geklickteten Taste abhängig ist. Event-Handler wurden mit Funktionen realisiert.</dd>
+                <dt>formating.html</dt>
+                <dd>Auf dieser Seite wurden Tags für Textformatierung demonstriert.</dd>
+                <dt>liste.html</dt>
+                <dd>Eine Seite mit 3 verschidenen Typen von Listen.</dd>
+                <dt>table.html</dt>
+                <dd>Eine Seite, die Tabellen mit Attributen 'colspan' und 'rowspan' darstellt.</dd>
+                <dt>dokumentation.html</dt>
+                <dd>Die Seite enthält die Projekt-Dokumentation.</dd>
+                <dt>SVG-Logo</dt>
+                <dd>SVG-Logo wurde mit https://editor.method.ac/ gezeichnet.</dd>
+            </dl>
+            <p>Das Projekt funktioniert auf mindestens 3 Browser (Chrome, Mozilla Firefox, Microsoft Edge). </p>
+        </div>
     </main>
     <footer>
-        <div class="container">
+        <div class="container footer">
             &copy; Albina Khadieva, 2023
         </div>
     </footer>
