--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a href="formating.html">Aufgabe-11</a>
             <a href="liste.html">Aufgabe-12</a>
             <a href="table.html">Aufgabe-13</a>
+            <a href="dokumentation.html">Dokumentation</a>
         </div>
     </header>
     <div class="main-aside container">
