--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Klausurprojekt XHCS">
+    <meta name="author" content="Albina Khadieva">
+    <meta name="copyright" content="Albina Khadieva">
+    <meta name="keywords" content="HTML, CSS, Javascript">
+    <meta name="robots" content="nofollow">
     <link rel="stylesheet" href="./css/gallery.css">
     <link rel="stylesheet" href="./css/style.css" >
-    
     <title>Aufgabe 3</title>
 </head>
 <body>
