--- a/dokumentation.html
+++ b/dokumentation.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Klausurprojekt XHCS">
     <meta name="author" content="Albina Khadieva">
     <meta name="copyright" content="Albina Khadieva">
