--- a/formating.html
+++ b/formating.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Klausurprojekt XHCS">
+        <meta name="author" content="Albina Khadieva">
+        <meta name="copyright" content="Albina Khadieva">
+        <meta name="keywords" content="HTML, CSS, Javascript">
+        <meta name="robots" content="nofollow">
         <link rel="stylesheet" href="./css/formating.css" />
         <link rel="stylesheet" href="./css/style.css" />
-        <meta charset="UTF-8" />
         <title>Aufgabe-11</title>
     </head>
     <body>
