--- a/multitafel.html
+++ b/multitafel.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Klausurprojekt XHCS">
+    <meta name="author" content="Albina Khadieva">
+    <meta name="copyright" content="Albina Khadieva">
+    <meta name="keywords" content="HTML, CSS, Javascript">
+    <meta name="robots" content="nofollow">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/multitafel.css">
     <title>Aufgabe 4</title>
